@@ -1,10 +1,17 @@
+2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b8
+
+ * Change: RFE #983979
+	
+	   Text for login is more descriptive.
+
 2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b7
 
- * Fix: Show descriptionbix in photo view only if there IS a description.
+ * Fix: Show descriptionbox in photo view only if there IS a description.
 
 2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b6
 
- * NEW:
+ * NEW: RFE #556928
+
 	A short link is shown in the thumbnail view.
 	After clicking, a nice panel with the description is shown.
 	Its dragable, so you can move it all over the screen.
